# Elora-School-Management-System

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/academics/: admin.py  forms.py  models.py  urls.py  views.py
apps/accounts/: admin.py  audit.py  context_processors.py  decorators.py  forms.py  managers.py  models.py  permissions.py  roles.py  urls.py  views.py
apps/activities/: admin.py  models.py  urls.py  views.py
apps/analytics/: dashboard_registry.py  urls.py  views.py
apps/assessments/: admin.py  models.py  permissions.py  services.py  urls.py  views.py
apps/attendance/: admin.py  apps.py  exports.py  forms.py  models.py  services.py  urls.py  views.py
apps/communication/: admin.py  models.py  services.py  urls.py  views.py
apps/core/: middleware.py  urls.py  views.py
apps/finance/: admin.py  models.py  services.py  urls.py  views.py
apps/learners/: admin.py  apps.py  forms.py  models.py  permissions.py  urls.py  views.py
apps/learning/: admin.py  models.py  services.py  urls.py  views.py
apps/reports/: admin.py  models.py  pdf.py  services.py  tasks.py  urls.py  views.py
apps/staff/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/tenancy/: admin.py  context.py  exceptions.py  managers.py  middleware.py  models.py  rls.py  tasks.py
apps/timetabling/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/wellbeing/: admin.py  apps.py  models.py  urls.py  views.py
assets/css/: input.css
config/: celery.py  urls.py
config/settings/: base.py  local.py  production.py  test.py
docs/operations/: attendance-timetabling.md  backup-restore.md  native-windows-development.md  people-academics.md  production-readiness.md  school-provisioning.md
static/css/: app.css
static/js/: app.js
templates/: 403.html  404.html  500.html
templates/academics/: structure.html
templates/accounts/: login.html  select_school.html
templates/activities/: index.html
templates/analytics/: dashboard.html
templates/assessments/: index.html
templates/attendance/: correct.html  index.html  learner_register.html  staff_register.html
templates/communication/: index.html
templates/components/: empty_state.html  messages.html  metric_card.html  page_header.html  sidebar.html  table_shell.html  topbar.html
templates/finance/: index.html  receipt.html  statement.html
tests/: conftest.py  factories.py  test_app_shell.py  test_container_config.py  test_factories.py  test_local_settings.py  test_milestone_2_exit_workflow.py  test_production_settings.py  test_project_bootstrap.py
(+109 files in other folders)
