[project]
name = "elora"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "Django==5.2.15",
  "django-environ==0.12.0",
  "django-htmx==1.23.2",
  "whitenoise==6.9.0",
]

[dependency-groups]
dev = [
  "pytest==8.4.2",
  "pytest-django==4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
addopts = "--strict-markers"
