[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "elora"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "celery==5.6.2",
  "Django==5.2.15",
  "django-environ==0.12.0",
  "django-htmx==1.23.2",
  "django-redis==6.0.0",
  "psycopg[binary]==3.2.13",
  "uvicorn[standard]==0.38.0",
  "whitenoise==6.9.0",
]

[tool.setuptools.packages.find]
include = ["apps*", "config*"]

[dependency-groups]
dev = [
  "factory-boy==3.3.3",
  "pytest==8.4.2",
  "pytest-django==4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
addopts = "--strict-markers"
